Add license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "kubawerlos/composer-smaller-lock",
     "type": "composer-plugin",
     "description": "Plugin to keep composer.lock smaller and readable",
+    "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
