--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,8 @@ jobs:
           - os: ubuntu-latest
             php-version: '7.4'
             composer_flags: '--prefer-lowest'
+          - os: ubuntu-latest
+            php-version: '8.1'
 
     name: ${{ matrix.os }} / PHP ${{ matrix.php-version }} ${{ matrix.composer_flags }}
 
