--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,4 +77,4 @@ jobs:
         run: composer update --no-progress ${{ matrix.composer_flags }}
 
       - name: Test
-        run: composer analyse
+        run: composer test
