--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,24 @@ on:
   - push
 
 jobs:
+  analyse:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          coverage: none
+
+      - name: Install dependencies
+        run: composer update --no-progress
+
+      - name: Analyse
+        run: composer analyse
+
   test:
     strategy:
       fail-fast: false
@@ -58,5 +76,5 @@ jobs:
       - name: Install dependencies
         run: composer update --no-progress ${{ matrix.composer_flags }}
 
-      - name: Run tests
-        run: ./vendor/bin/phpunit
+      - name: Test
+        run: composer test
