Fix for latest Composer release

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,13 @@
             "Tests\\": "./tests"
         }
     },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "kubawerlos/composer-smaller-lock": true,
+            "phpstan/extension-installer": true
+        }
+    },
     "extra": {
         "class": "ComposerSmallerLock\\Plugin"
     },
