--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,9 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    env:
+      COMPOSER_PROCESS_TIMEOUT: 300
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v2
