--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: '8.2'
           coverage: none
 
       - name: Install dependencies
@@ -30,14 +30,18 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-latest, ubuntu-latest ]
-        php-version: [ '7.4', '8.0' ]
+        php-version: [ '7.4', '8.2' ]
         composer_flags: [ '' ]
         include:
           - os: ubuntu-latest
             php-version: '7.4'
             composer_flags: '--prefer-lowest'
           - os: ubuntu-latest
+            php-version: '8.0'
+          - os: ubuntu-latest
             php-version: '8.1'
+          - os: ubuntu-latest
+            php-version: '8.3'
 
     name: ${{ matrix.os }} / PHP ${{ matrix.php-version }} ${{ matrix.composer_flags }}
 
