Update dev tools

--- a/.dev-tools/phpstan.neon
+++ b/.dev-tools/phpstan.neon
@@ -4,6 +4,7 @@ parameters:
   level: max
   paths:
     - ../src
+  treatPhpDocTypesAsCertain: false
 
 includes:
   - ./vendor/phpstan/phpstan/conf/bleedingEdge.neon
