--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
-/tests/ export-ignore
+/.dev-tools/* -linguist-detectable
+
 /.* export-ignore
+/tests/ export-ignore
 /phpunit.xml export-ignore
+
+* text eol=lf
