--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: none
+          extensions: none, mbstring
           coverage: none
 
       - name: Install dependencies
@@ -62,7 +62,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: none
+          extensions: none, mbstring
           coverage: none
 
       - name: Get Composer data directory
