--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: none, mbstring
+          extensions: none, curl, dom, mbstring
           coverage: none
 
       - name: Install dependencies
@@ -62,8 +62,11 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: none, mbstring
+          extensions: none, curl, dom, mbstring
           coverage: none
+          
+      - name: Show PHP modules
+        run: php -m
 
       - name: Get Composer data directory
         id: composer-data
