--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: none, curl, dom, mbstring, xml, xmlwriter
+          extensions: none, curl, dom, mbstring, tokenizer, xml, xmlwriter
           coverage: none
 
       - name: Install dependencies
@@ -62,7 +62,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: none, curl, dom, mbstring, xml, xmlwriter
+          extensions: none, curl, dom, mbstring, tokenizer, xml, xmlwriter
           coverage: none
           
       - name: Show PHP modules
