--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+          extensions: none, curl, dom, mbstring, opcache, simplexml, tokenizer, xml, xmlwriter
           coverage: none
 
       - name: Install dependencies
@@ -61,6 +62,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+          extensions: none, ctype, curl, dom, json, mbstring, opcache, tokenizer, xml, xmlwriter
           coverage: none
 
       - name: Get Composer data directory
