--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.3'
           extensions: none, curl, dom, mbstring, opcache, simplexml, tokenizer, xml, xmlwriter
           coverage: none
 
@@ -40,14 +40,16 @@ jobs:
             php-version: '8.0'
           - os: ubuntu-latest
             php-version: '8.1'
-          - os: macos-latest
-            php-version: '8.2'
           - os: ubuntu-latest
             php-version: '8.2'
-          - os: windows-latest
-            php-version: '8.2'
+          - os: macos-latest
+            php-version: '8.3'
           - os: ubuntu-latest
             php-version: '8.3'
+          - os: windows-latest
+            php-version: '8.3'
+          - os: ubuntu-latest
+            php-version: '8.4'
 
     name: PHP ${{ matrix.php-version }} (${{ matrix.os }}) ${{ matrix.composer_flags }}
 
