--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,9 @@ jobs:
             php-version: '7.4'
           - os: ubuntu-latest
             php-version: '8.0'
+            composer_flags: '--prefer-lowest'
+          - os: ubuntu-latest
+            php-version: '8.0'
           - os: ubuntu-latest
             php-version: '8.1'
           - os: ubuntu-latest
