--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,10 @@
 name: CI
 
 on:
-  - pull_request
-  - push
+  pull_request:
+  push: ~
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   analyse:
@@ -11,7 +13,7 @@ jobs:
       PHP_CS_FIXER_IGNORE_ENV: 1
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -62,40 +64,23 @@ jobs:
       COMPOSER_PROCESS_TIMEOUT: 300
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
           extensions: none, ctype, curl, dom, json, mbstring, opcache, openssl, tokenizer, xml, xmlwriter
           coverage: none
 
-      - name: Get Composer data directory
-        id: composer-data
-        run: echo '::set-output name=dir::$(composer config data-dir)'
+      - id: composer-cache
+        shell: bash
+        run: echo "dir=$(composer config cache-dir)" >> $GITHUB_OUTPUT
 
-      - name: Cache Composer data
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.composer-data.outputs.dir }}
-          key: ${{ runner.os }}-composer-data-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-data-
-
-      - name: Get Composer cache directory
-        id: composer-cache
-        run: echo '::set-output name=dir::$(composer config cache-files-dir)'
-
-      - name: Cache dependencies
-        uses: actions/cache@v1
+      - uses: actions/cache@v4
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-cache-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-cache-
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
 
-      - name: Install dependencies
-        run: composer update --no-progress ${{ matrix.composer_flags }}
+      - run: composer update --no-progress ${{ matrix.composer_flags }}
 
-      - name: Test
-        run: composer test
+      - run: composer test
