--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,8 @@ jobs:
       - name: Install dependencies
         run: composer update --no-progress
 
+      - run: git diff
+
       - name: Analyse
         run: composer analyse
 
