--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,10 +25,8 @@ jobs:
       - name: Install dependencies
         run: composer update --no-progress
 
-      - run: git diff
-
       - name: Analyse
-        run: composer analyse
+        run: composer analyse -vvv
 
   test:
     strategy:
