--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
         run: composer update --no-progress
 
       - name: Analyse
-        run: composer analyse -vvv
+        run: composer analyse
 
   test:
     strategy:
